# server/api/Dtos/Requests/CreateBookRequestDto.cs
@@ -6,4 +6,6 @@ public class CreateBookRequestDto
 {
     [Required] [Range(1, int.MaxValue)] public int Pages { get; set; }
     [Required] [MinLength(1)] public string Title { get; set; }
+    public string? Imageurl { get; set; }
+    
 }
