# server/dataaccess/Entities/Book.cs
@@ -11,9 +11,11 @@ public partial class Book
 
     public int Pages { get; set; }
 
-    public DateTime Createdat { get; set; }
+    public DateTime? Createdat { get; set; }
 
     public string? Genreid { get; set; }
+
+    public string? Imageurl { get; set; }
 
     public virtual Genre? Genre { get; set; }
 
